Add a centralised css design and a place holder image for avergate temperature

--- a/sensorapp/templates/about/about.html
+++ b/sensorapp/templates/about/about.html
@@ -11,6 +11,11 @@
 </ul>
 {% endblock %}
 {% block content %}
+<div class="whitebox">
 <h1> Sensor application</h1>
-<p> Developed by Peter Franzreb</p>
+<p style="font-size: larger;">
+    This website shows the temperature value of an ds18b22 1 wire protocol <br>
+    temperature sensor which is connected to a Raspberry Pi mini computer.
+</p>
+</div>
 {% endblock %}
