--- a/sensorapp/templates/graph/graph.html
+++ b/sensorapp/templates/graph/graph.html
@@ -11,8 +11,8 @@
    </ul>
 {% endblock %}
 {% block content %}
+<div class="whitebox">
     <h1>Average temperature over time</h1>
-    <p class="important">
-     place holder for graph over time
-    </p>
+     <img src="{{ url_for('static', filename='test_graph.png') }}"
+</div>
 {% endblock %}
