--- a/sensorapp/static/style.css
+++ b/sensorapp/static/style.css
@@ -26,21 +26,35 @@ ul {
     background-color: red;
   }
 
+  #central {
+    margin-left: 16%;
+    width: 68%;
+  }
+
   #content {
       text-align: center;
       background-color: lightgray;
-      margin-left: 200px;
-      margin-right: 200px;
+      /* margin-left: 200px; */
+      /* margin-right: 200px; */
       margin-bottom: 10px;
-      margin-top: 0px;
+      /* margin-top: 0px; */
       border-color: black;
   }
 
   #footer {
       text-align: center;
   }
+
+  .whitebox {
+    background: #eee;
+    border: 4px solid white;
+    box-shadow: 0 0 1px rgba(0,0,0, .4);
+  }
   
   #temperature {
     font-family: 'Righteous', cursive;
-    font-size: 200px;
+    font-size: 1000%;
+    background: #eee;
+    border: 4px solid white;
+    box-shadow: 0 0 1px rgba(0,0,0, .4);
   }
