Add js function to query the temperature every 5 seconds

--- a/sensorapp/templates/graph/graph.html
+++ b/sensorapp/templates/graph/graph.html
@@ -13,6 +13,6 @@
 {% block content %}
 <div class="whitebox">
     <h1>Average temperature over time</h1>
-     <img src="{{ url_for('static', filename='test_graph.png') }}"
+     <img src="{{ url_for('static', filename='test_graph.png') }}">
 </div>
 {% endblock %}
