--- a/sensorapp/templates/base.html
+++ b/sensorapp/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>{% block title %}{% endblock %} Sensor App</title>
     {% endblock %}
 </head>
